# autoai

./: CONTRIBUTING.md  ClassificationTest.py  Process.yaml  README.md  RegressionTest.py  Test.py  aicodegen.py  codefile.ipynb  codefile.py  confusion matrix.py  gan_test.py  requirements.txt  sample_use.py  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
blobcity/: __init__.py  blobcity.py  model.py
blobcity/aicloud/: __init__.py  access_validation.py  auto_save_yaml.py
blobcity/code_gen/: Generator.py  IpynbMeta.py  PyMeta.py  SourceCodes.py  __init__.py
blobcity/code_gen/SVM/Classification/: SVC.json  SVC.py  SVC_packages.json
blobcity/config/: __init__.py  classifier_config.py  gan_config.py  regressor_config.py  time_config.py  tuner.py
blobcity/generative_ai/: __init__.py
blobcity/generative_ai/image/main/: driver.py
blobcity/image/main/: __init__.py  driver.py
blobcity/main/: __init__.py  driver.py  modelSelection.py
blobcity/store/: DictClass.py  Model.py  __init__.py
blobcity/time/: __init__.py
blobcity/time/main/: __init__.py  driver.py
blobcity/utils/: AutoFeatureSelection.py  Cleaner.py  FileType.py  ProblemType.py  YamlGenerator.py  __init__.py  progress_bar.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: CNAME  index.md
structured_data_classifier/: graph  oracle.json  tuner0.json
structured_data_classifier/best_model/: keras_metadata.pb  saved_model.pb
structured_data_classifier/best_model/variables/: variables.data-00000-of-00001  variables.index
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/: trial.json
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/checkpoints/epoch_0/: checkpoint.data-00000-of-00001  checkpoint.index
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/checkpoints/epoch_10/: checkpoint.data-00000-of-00001  checkpoint.index
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/checkpoints/epoch_11/: checkpoint.data-00000-of-00001  checkpoint.index
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/checkpoints/epoch_12/: checkpoint.data-00000-of-00001  checkpoint.index
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/checkpoints/epoch_13/: checkpoint.data-00000-of-00001  checkpoint.index
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/checkpoints/epoch_14/: checkpoint.data-00000-of-00001  checkpoint.index
structured_data_classifier/trial_117b3f43d52d1ba4f0210a84ca10cc68/checkpoints/epoch_15/: checkpoint.data-00000-of-00001  (+1 more)
structured_data_classifier/trial_25d5f7d7ef2db37623356b03c32dbb46/: trial.json
structured_data_classifier/trial_4d71ade292479d8b6e7946c0cc5b6ca3/: trial.json
structured_data_classifier/trial_6ff491e3e6b7a9c23e3155a0ec75025a/: pipeline  trial.json
structured_data_classifier/trial_91e3363cb6721d8addfaaf0e055e7d5d/: trial.json
structured_data_classifier/trial_a5f0e6729c9d6ae276c4f0bc6d2a0b7c/: trial.json
structured_data_classifier/trial_ab70ccd73dbdb2945b731c53d189ccb3/: trial.json
structured_data_classifier/trial_ad32a3dd51201e7b3e85a635901104f5/: trial.json
structured_data_classifier/trial_c12116d817381fd1f39c5409e3648d6f/: trial.json
structured_data_classifier/trial_f9d00d4109c26b4a7ab7a5865f1626c3/: trial.json
tests/: RegressionTest.py
yml/: Process.yaml  master.yml
(+215 files in other folders)
