[metadata]
name = blobcity
version = 0.0.3
author = "BlobCity, Inc"
author_email = "oss@blobcity.com"
url = https://github.com/blobcity/autoai
description = A framework for Automatic AI (AutoAI). Does automatic data pre-processing, model search and hyper-parameter turning. Comes with best in the industry code generation capability that produces high quality and well documented source code (train+test) for complete transparency and reproducible results.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires=
    cliff>=3.6.0
    joblib>=1.0.0
    numpy>=1.21.0
    pandas>=1.3.0
    PyYAML>=6.0
    scikit-learn>=0.23.0
    optuna>=2.6.0
    imbalanced-learn >= 0.8.0
    xgboost>=1.4.0
    catboost>=0.26
    lightgbm>=3.2.0

[options.packages.find]
