[metadata]
name = blobcity
version = 0.0.6
author = "BlobCity, Inc"
author_email = "support@blobcity.com"
url = https://github.com/blobcity/autoai
description = Python based framework for Automatic AI for Regression and Classification over numerical data. Performs model search, hyper-parameter tuning, and high-quality Jupyter Notebook code generation.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires=
    dill>=0.3.4
    cliff>=3.6.0
    joblib>=1.0.0
    numpy>=1.21.0
    pandas>=1.3.0
    PyYAML>=6.0
    scikit-learn>=0.23.0
    seaborn>=0.10.0
    optuna>=2.6.0
    imbalanced-learn >= 0.8.0
    xgboost>=1.4.0
    catboost>=0.26
    lightgbm>=3.2.0
[options.packages.find]
