[metadata]
name = blobcity
version = 0.0.13
author = "BlobCity, Inc"
author_email = "support@blobcity.com"
url = https://github.com/blobcity/autoai
description = Python based framework for Automatic AI for Regression and Classification over numerical data. Performs model search, hyper-parameter tuning, and high-quality Jupyter Notebook code generation.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = > 3.6
install_requires=
    dill>=0.3.4
    cliff>=3.6.0
    joblib>=1.0.0
    nbformat>=5.10.4
    requests>=2.32.3
    numpy>=1.22.0
    pandas>=2.0.3
    httplib2>=0.20.0
    PyYAML>=6.0
    scikit-learn>=1.3.2
    seaborn>=0.10.0
    optuna>=2.10.1
    imbalanced-learn >= 0.8.0
    xgboost>=1.6.0
    catboost==1.2.5
    lightgbm>=3.2.0
[options.packages.find]
